[gd_scene load_steps=2 format=3 uid="uid://c8vqmx3ynw7a8"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_battle"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.18, 0.22, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StageLabel" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "ステージ 1"

[node name="Spacer" type="Control" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndTurnButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "ターン終了"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 8

[node name="UnitInfo" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "ユニットを選択してください"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CombatPreview" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MoveButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "移動"
disabled = true

[node name="AttackButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "攻撃"
disabled = true

[node name="WaitButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "待機"
disabled = true

[connection signal="pressed" from="VBoxContainer/TopBar/EndTurnButton" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionButtons/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionButtons/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionButtons/WaitButton" to="." method="_on_wait_button_pressed"]
